[package]
name = "hub75-embassy-nrf-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Embassy dependencies
embassy-executor = { version = "0.7", default-features = false, features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "executor-interrupt",
] }
embassy-time = { version = "0.4", default-features = false, features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.5", default-features = false, features = [
  "defmt",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "rt",
] }
embassy-futures = "0.1"
embassy-sync = { version = "0.7", features = ["defmt"] }

# HUB75 driver
hub75-embassy = { path = "../..", features = ["embedded-graphics", "defmt"] }

# Graphics
embedded-graphics = "0.8"

# Utility dependencies
heapless = "0.8"
futures = { version = "0.3", default-features = false, features = [
  "async-await",
] }

# Logging and debugging
defmt = "1.0"
defmt-rtt = "1.0"

# Hardware abstraction
cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"
panic-probe = { version = "1.0", features = ["print-defmt"] }

# Random number generation (for animations)
rand = { version = "0.9", default-features = false }
rand_core = "0.9"
rand_chacha = { version = "0.9", default-features = false }

[profile.release]
debug = 2

[features]
default = ["nrf52840"]

# nRF chip variants
nrf52832 = ["embassy-nrf/nrf52832"]
nrf52833 = ["embassy-nrf/nrf52833"]
nrf52840 = ["embassy-nrf/nrf52840"]

# Panel size presets (matching main crate)
size-32x16 = ["hub75-embassy/size-32x16"]
size-64x32 = ["hub75-embassy/size-64x32"]
size-64x64 = ["hub75-embassy/size-64x64"]
size-128x64 = ["hub75-embassy/size-128x64"]

# Color depth options (matching main crate)
color-4bit = ["hub75-embassy/color-4bit"]
color-6bit = ["hub75-embassy/color-6bit"]
color-8bit = ["hub75-embassy/color-8bit"]

[[bin]]
name = "basic_display"
path = "src/bin/basic_display.rs"

[[bin]]
name = "animated_patterns"
path = "src/bin/animated_patterns.rs"

[[bin]]
name = "text_display"
path = "src/bin/text_display.rs"

[[bin]]
name = "graphics_demo"
path = "src/bin/graphics_demo.rs"

